2010-07-24  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Generic translator texi2any/makeinfo): rename
	from "Generic converter", edit chapter intro.

2010-07-24  Patrice Dumas  <pertusus@free.fr>

	* doc/texinfo.txi (Initialization files basics): merge `Function 
	prototypes' node.
	Put 'Initializing and finalizing' below 'Initialization files 
	basics'.
	Add the information about @-commands formatting.

2010-07-23  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (setfilename): more about TeX behavior.
	(Invoking texi2any),
	(Pointer Validation),
	(HTML Splitting),
	(HTML Xref Command Expansion),
	(The different elements),
	(Contents and Overview text):
	English, examples, minor details.

2010-07-23  Patrice Dumas  <pertusus@free.fr>

	* texi2html/Tests: remove this unused directory tree.

2010-07-23  Patrice Dumas  <pertusus@free.fr>

	* doc/texinfo.txi (texi2any output customization): add the
	general informations about initialization files and the document
	layout.

2010-07-21  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Invoking texi2any) <--conf-dir>: reformat.

2010-07-19  Patrice Dumas  <pertusus@free.fr>

	* texi2html/test/sectionning: rename to sectioning.
	Also replace sectionning with sectioning in documentation 
	files.

2010-07-19  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (HTML Xref Link Preservation): new node
	about the MANUAL-noderename.cnf file.

2010-07-19  Patrice Dumas  <pertusus@free.fr>

	* doc/texinfo.txi (Generic converter texi2any/makeinfo): add a
	chapter for texi2any/makeinfo. Merge Invoking makeinfo and
	makeinfo options and put it in the chapter as Invoking texi2any, 
	together with Pointer Validation and the description of 
	texi2any Configuration variables.

2010-07-18  Karl Berry  <karl@gnu.org>

	* AUTHORS, 
	* INSTALL,
	* NEWS,
	* README,
	* TODO: update for texi2html.
	* makeinfo/README: update for obsolescence.

2010-07-18  Patrice Dumas  <pertusus@free.fr>
